# DriverBehaviourDet

./: .env.example  .gitignore  Makefile  README.md  RF_DETR_Train.ipynb  docker-compose.dev.yml  driver_beh_inferance.py  pyproject.toml
deploy/docker/: alerts.Dockerfile  api.Dockerfile  base.Dockerfile  detector.Dockerfile  evidence.Dockerfile  face.Dockerfile  fusion.Dockerfile  ingest.Dockerfile
deploy/helm/driver-analytics/: Chart.yaml  values-runpod.yaml  values.yaml
deploy/helm/driver-analytics/templates/: _helpers.tpl  _worker.tpl  api.yaml  configmap-env.yaml  keda-scalers.yaml  triton.yaml  workers.yaml
frontend/: dashboard.html
observability/: otel-collector-config.yaml
observability/grafana/dashboards/: pipeline.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/prometheus/: prometheus.yml  rules.yaml
scripts/: manage.sh  replay_kafka.py  seed_dev.py  setup.sh  test_video_inject.py
scripts/load_test/: mediamtx.yml
tests/: conftest.py
tests/unit/: test_fusion_service.py  test_live_inference_ws.py  test_schemas_roundtrip.py  test_state_machine.py  test_stream_upload_route.py  test_temporal_window.py
triton/model_repository/rfdetr_driver_behaviour/: config.pbtxt
triton/model_repository/rfdetr_driver_behaviour_onnx/: config.pbtxt
triton/model_repository/rfdetr_driver_behaviour_onnx/1/: README.txt
triton/scripts/: benchmark.sh  onnx_to_trt.sh  verify_parity.py
