[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-analytics-platform"
version = "0.1.0"
description = "Cloud-native multi-stream driver behaviour analytics platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # core
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "orjson>=3.9",
  "uvloop>=0.19; platform_system != 'Windows'",
  "anyio>=4.3",
  "tenacity>=8.2",
  # video / image
  "av>=12.0",            # PyAV (FFmpeg bindings, NVDEC capable)
  "opencv-python-headless>=4.9",
  "numpy>=1.26",
  "pillow>=10.2",
  # ML / inference clients
  "onnxruntime>=1.17",
  "tritonclient[grpc,http]>=2.45",
  "mediapipe>=0.10.11",
  # infra clients
  "aiokafka>=0.10",
  "redis[hiredis]>=5.0",
  "boto3>=1.34",
  "asyncpg>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  # api
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "websockets>=12.0",
  "httpx>=0.27",
  # observability
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.9",
  "pre-commit>=3.7",
  "locust>=2.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 110
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true
